Little changes - repaired problems (not showing correctly)

--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ header img {
 }
 
 #menu .closebtn {
-    position: fixed;
+    position: absolute;
     top: 30px;
     font-size: 40px;
 }
